fixed contrast

--- a/styles/global.css
+++ b/styles/global.css
@@ -169,6 +169,6 @@ h1 {
 }
 
 #hero p {
-    font-size: 1.1rem;
+    font-size: 1.35rem;
     max-width: 400px;
 }
