--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -100,5 +100,5 @@ body {
 }
 
 #star {
-    color: goldenrod;
+    color: darkgoldenrod;
 }
